ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerUnicodeEscapeInKeyword1/input.ts.stderr
error[1260]: Keywords cannot contain escape characters: 'var'
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerUnicodeEscapeInKeyword1/input.ts:1:1
  |
1 | \u0076ar x = "hello";
  | ^^^^^^^^

